// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductImage /> should apply an inner shadow to the image if turned off via the widget settings 1`] = `
<ProductImage
  alt={null}
  animating={true}
  className={null}
  classes={
    {
      "innerShadow": "tss-qvc75c-ProductImage-innerShadow",
      "placeholder": "tss-iecjxp-ProductImage-placeholder",
      "placeholderContainer": "tss-h32ut1-ProductImage-placeholderContainer",
      "placeholderContent": "tss-elojqu-ProductImage-placeholderContent",
    }
  }
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  noBackground={false}
  placeholderSrc={null}
  ratio={null}
  resolutions={
    [
      {
        "blur": 2,
        "height": 50,
        "width": 50,
      },
      {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="http://placehold.it/300x300"
  srcmap={null}
  widgetSettings={
    {
      "showInnerShadow": true,
    }
  }
/>
`;

exports[`<ProductImage /> should apply an inner shadow to the placeholder if turned off via the widget settings 1`] = `
<ProductImage
  alt={null}
  animating={true}
  className={null}
  classes={
    {
      "innerShadow": "tss-qvc75c-ProductImage-innerShadow",
      "placeholder": "tss-iecjxp-ProductImage-placeholder",
      "placeholderContainer": "tss-h32ut1-ProductImage-placeholderContainer",
      "placeholderContent": "tss-elojqu-ProductImage-placeholderContent",
    }
  }
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  noBackground={false}
  placeholderSrc={null}
  ratio={null}
  resolutions={
    [
      {
        "blur": 2,
        "height": 50,
        "width": 50,
      },
      {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src={null}
  srcmap={null}
  widgetSettings={
    {
      "showInnerShadow": true,
    }
  }
/>
`;

exports[`<ProductImage /> should not apply an inner shadow to the image if turned off via the app config 1`] = `
<ProductImage
  alt={null}
  animating={true}
  className={null}
  classes={
    {
      "innerShadow": "tss-qvc75c-ProductImage-innerShadow",
      "placeholder": "tss-iecjxp-ProductImage-placeholder",
      "placeholderContainer": "tss-h32ut1-ProductImage-placeholderContainer",
      "placeholderContent": "tss-elojqu-ProductImage-placeholderContent",
    }
  }
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  noBackground={false}
  placeholderSrc={null}
  ratio={null}
  resolutions={
    [
      {
        "blur": 2,
        "height": 50,
        "width": 50,
      },
      {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="http://placehold.it/300x300"
  srcmap={null}
  widgetSettings={
    {
      "mocked": "widgetSetting",
    }
  }
/>
`;

exports[`<ProductImage /> should not apply an inner shadow to the image if turned off via the widget settings 1`] = `
<ProductImageWithStyles
  src="http://placehold.it/300x300"
  widgetSettings={
    {
      "showInnerShadow": false,
    }
  }
/>
`;

exports[`<ProductImage /> should not apply an inner shadow to the placeholder if turned off via the app config 1`] = `
<ProductImage
  alt={null}
  animating={true}
  className={null}
  classes={
    {
      "innerShadow": "tss-qvc75c-ProductImage-innerShadow",
      "placeholder": "tss-iecjxp-ProductImage-placeholder",
      "placeholderContainer": "tss-h32ut1-ProductImage-placeholderContainer",
      "placeholderContent": "tss-elojqu-ProductImage-placeholderContent",
    }
  }
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  noBackground={false}
  placeholderSrc={null}
  ratio={null}
  resolutions={
    [
      {
        "blur": 2,
        "height": 50,
        "width": 50,
      },
      {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src={null}
  srcmap={null}
  widgetSettings={
    {
      "mocked": "widgetSetting",
    }
  }
/>
`;

exports[`<ProductImage /> should not apply an inner shadow to the placeholder if turned off via the widget settings 1`] = `
<ProductImage
  alt={null}
  animating={true}
  className={null}
  classes={
    {
      "innerShadow": "tss-qvc75c-ProductImage-innerShadow",
      "placeholder": "tss-iecjxp-ProductImage-placeholder",
      "placeholderContainer": "tss-h32ut1-ProductImage-placeholderContainer",
      "placeholderContent": "tss-elojqu-ProductImage-placeholderContent",
    }
  }
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  noBackground={false}
  placeholderSrc={null}
  ratio={null}
  resolutions={
    [
      {
        "blur": 2,
        "height": 50,
        "width": 50,
      },
      {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src={null}
  srcmap={null}
  widgetSettings={
    {
      "showInnerShadow": false,
    }
  }
/>
`;

exports[`<ProductImage /> should render a placeholder if no src prop is provided 1`] = `
<ProductImage
  alt={null}
  animating={true}
  className={null}
  classes={
    {
      "innerShadow": "tss-qvc75c-ProductImage-innerShadow",
      "placeholder": "tss-iecjxp-ProductImage-placeholder",
      "placeholderContainer": "tss-h32ut1-ProductImage-placeholderContainer",
      "placeholderContent": "tss-elojqu-ProductImage-placeholderContent",
    }
  }
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  noBackground={false}
  placeholderSrc={null}
  ratio={null}
  resolutions={
    [
      {
        "blur": 2,
        "height": 50,
        "width": 50,
      },
      {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src={null}
  srcmap={null}
  widgetSettings={
    {
      "mocked": "widgetSetting",
    }
  }
/>
`;

exports[`<ProductImage /> should render the image without a placeholder 1`] = `
<ProductImage
  alt={null}
  animating={true}
  className={null}
  classes={
    {
      "innerShadow": "tss-qvc75c-ProductImage-innerShadow",
      "placeholder": "tss-iecjxp-ProductImage-placeholder",
      "placeholderContainer": "tss-h32ut1-ProductImage-placeholderContainer",
      "placeholderContent": "tss-elojqu-ProductImage-placeholderContent",
    }
  }
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  noBackground={false}
  placeholderSrc={null}
  ratio={null}
  resolutions={
    [
      {
        "blur": 2,
        "height": 50,
        "width": 50,
      },
      {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="http://placehold.it/300x300"
  srcmap={null}
  widgetSettings={
    {
      "mocked": "widgetSetting",
    }
  }
/>
`;
